Fixed issue where dark mode background would not take effect on some vertical screens. Unified footer between pages. Fixed issue where screen would not fit properly to smaller desktop resolutions such as 800x600. Tidied CSS.

--- a/css/mobile/style.css
+++ b/css/mobile/style.css
@@ -1,4 +1,6 @@
-/* Mobile-specific styles */
+/* ==================================== */
+/* Mobile-Specific Style Adjustments    */
+/* ==================================== */
 @media (max-width: 600px) {
     .hero {
         padding: 50px 10px;
@@ -16,17 +18,17 @@
 
     .header {
         display: flex;
-        flex-direction: row; 
-        align-items: center; 
-        justify-content: center; 
-        gap: 10px; 
-        flex-wrap: wrap; 
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        flex-wrap: wrap;
     }
 
     .nav-item {
         font-size: 14px;
         padding: 5px 8px;
-        text-align: center; 
+        text-align: center;
     }
 
     .container {
@@ -57,46 +59,46 @@
     }
 
     footer {
-        padding: 20px; 
-        font-size: 14px; 
-        text-align: center; 
-        line-height: 1.8; 
+        padding: 20px;
+        font-size: 14px;
+        text-align: center;
+        line-height: 1.8;
     }
-    
+
     footer a {
-        display: inline-block; 
-        margin: 0px 0; 
-        padding: 0px; 
-        text-decoration: none; 
-        color: var(--accent); 
-        border-radius: 5px; 
-        transition: background-color 0.3s; 
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+        text-decoration: none;
+        color: var(--accent);
+        border-radius: 5px;
+        transition: background-color 0.3s;
     }
 
     .footer-desktop {
-    display: none; 
+        display: none;
     }
 
     .footer-mobile {
-    display: block; 
-    text-align: center; 
-    padding: 10px; 
-    font-size: 14px; 
-    line-height: 1.8; 
+        display: block;
+        text-align: center;
+        padding: 10px;
+        font-size: 14px;
+        line-height: 1.8;
     }
 
     .footer-mobile a {
-    display: inline-block; 
-    margin: 5px 0; 
-    padding: 5px; 
-    text-decoration: none; 
-    color: var(--accent); 
-    border-radius: 5px; 
-    transition: background-color 0.3s; 
+        display: inline-block;
+        margin: 5px 0;
+        padding: 5px;
+        text-decoration: none;
+        color: var(--accent);
+        border-radius: 5px;
+        transition: background-color 0.3s;
     }
 
     .footer-mobile a:hover {
-    background-color: var(--box-light); 
+        background-color: var(--box-light);
     }
 
     .footer-mobile-copy {
